# Me-LLaMA

./: .gitmodules  README.md  pyproject.toml  requirements.txt
scripts/: run_evaluation.sh
src/: chatlm.py  eval.py  evaluator.py  model_prompt.py  preprocess_instruct.py  process_data.ipynb
src/tasks/: __init__.py  utils.py  vital_measure.py
